--- a/4-HOMEWORKpoHTMLCSS/style.css
+++ b/4-HOMEWORKpoHTMLCSS/style.css
@@ -1,3 +1,7 @@
+/* *{
+  outline: 1px solid red;
+} */
+
 body
 {
   background-image: url("body/1.png");
@@ -55,7 +59,7 @@ header
   margin-left: auto;
   margin-right: 25px;
 }
-/*  
+ 
 .nav-icon1
 {
   width: 19px; height: 19px;
@@ -72,7 +76,7 @@ header
 {
   width: 20px; height: 20px;
   background: url('header/sprites.png') -128px -10px;
-} */
+}
 
 .login a
 {
@@ -84,10 +88,9 @@ header
 }
 .welcome-line
 {
-  /* opacity: 0.102; */
   margin-right: 25px;
 }
-/* .branding a:hover
+.branding a:hover
 {
   color: #3cb878;
   transition: 0.6s;
@@ -105,8 +108,8 @@ header
 .nav-icon3:hover
 {
   width: 20px; height: 20px;
-  background: url('header/sprites.png') -88px -10px; */
-/* } */
+  background: url('header/sprites.png') -88px -10px; 
+}
 .login:hover 
 {
   color: #3cb878;
@@ -244,41 +247,41 @@ main
 .welcome-line
 {
   font-size: 28px;
-  opacity: 0.102;
+  
   color:rgb(0, 0, 0);
   padding-top: 9px;
   padding-bottom: 9px;
 }
-.orline
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 33px;
+.title {
+  /* чтобы линии не выходили за ширину блока заголовка */
+  overflow: hidden;
+    margin-top: 23px;
+    font-size: 14px;
+    font-family: "Verdana";
+    color: rgb(132, 132, 132);
+    line-height: 1.5;
 }
-.divider-line4
-{
-  width: 150px;
-  background-color: #eaeaea;
-  height: 0.5px;
-  margin-left: 19px;
+.title:before,
+.title:after {
+  content: '';
+    display: inline-block;
+    vertical-align: middle;
+    box-sizing: border-box;
+    width: 100%;
+  height: 1px;
+  background: #0a0a0a32;
+    border: solid #FFF;
+  border-width: 0 20px;
 }
-.divider-line3
-{
-  width: 150px;
-  background-color: #eaeaea;
-  height: 0.5px;
-  margin-right: 19px;
+.title:before {
+  
+  margin-left: 73px;
+    width: 135px;
 }
-.or-text{
-  text-align: center;
-}
-.or-divider p
-{
-  font-size: 14px;
-  font-family: "Verdana";
-  color: rgb(132, 132, 132);
-  line-height: 1.5;
+.title:after {
+  
+  margin-right: 60px;
+    width: 135px;
 }
 form
 {
