--- a/7-HOMEWORKpoHTMLCSS/style.css
+++ b/7-HOMEWORKpoHTMLCSS/style.css
@@ -7,7 +7,7 @@ body {
 }
 .star-wars {
     position: relative;
-    max-height: 100%;
+    height: 100vh;
     overflow: hidden;
     perspective: 400px;
 }
@@ -16,15 +16,26 @@ body {
     bottom: -100%;
     width: 100%;
     text-align: center;
-    font-size: 70px;
+    font-size: 35px;
     font-weight: bold;
-    animation: crawl 60s linear infinite;
+    animation: crawl 10s linear infinite;
 }
 .crawl-content {
     transform: rotateX(65deg);
     transform-origin: 50% 100%;
 }
 @keyframes crawl {
-    0% { bottom: -250%; }
-    100% { bottom: 200%; }
+    0% { bottom: -320%; }
+    100% { bottom: 100%; }
+    0%{
+        transform: rotateX(21deg) translate3d(0, 65rem, 0);
+        opacity: 1;
+    }
+    85% {
+        opacity: 1;
+    }
+    100%{
+        transform: rotateX(21deg) translate3d(0, -60rem, 0);
+        opacity: 0;
+    }
 }
